--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,56 @@
-/.venv
-/yolov5s.pt
+# Environment files with sensitive data
+.env
+camera_config.env
+*.env
+
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
+
+# Virtual environments
+.venv/
+venv/
+ENV/
+env/
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Logs
+*.log
+
+# Model files (optional - uncomment if you don't want to track large model files)
+# *.pt
+# *.pth
+# *.onnx
+
+# Temporary files
+*.tmp
+*.temp
